--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "mathjs": "^12.1.0",
     "next": "14.0.3",
+    "polynomial": "^1.4.5",
     "react": "^18",
     "react-dom": "^18"
   },
