install chart js

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.0.3",
     "polynomial": "^1.4.5",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7"
