--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@faker-js/faker": "^8.3.1",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "chart.js": "^4.4.1",
     "class-variance-authority": "^0.7.0",
